--- a/CheckIn/Properties/AndroidManifest.xml
+++ b/CheckIn/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="CheckIn.CheckIn" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="16" />
-  <application android:label="CheckIn"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="CheckIn.CheckIn" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="CheckIn" android:theme="@android:style/Theme.Material.Light"></application>
 </manifest>
